--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,1 +1,8 @@
-import 
+---
+import Layout from '../layouts/global-layout.astro';
+---
+
+<Layout title="Home - My Portfolio">
+    <h1>Welcome to my portfolio</h1>
+    <p>Your content goes here</p>
+</Layout>
