update the site color

--- a/src/layouts/global-layout.astro
+++ b/src/layouts/global-layout.astro
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>John Lloyd Canoy Portfolio</title>
-    
+
 </head>
 <body>
     <slot />
@@ -18,8 +18,8 @@
         font-family: "Roboto", sans-serif;
         margin: 0;
         padding: 0;
-        background-color: #f5f5f5;
-        color: #333;
+        background-color: #333;
+        color: #e8e7e7;
     }
     
     a {
