--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from '../layouts/global-layout.astro';
+import '../styles/global.css'
 ---
 
 <Layout title="Home - My Portfolio">
