--- a/src/components/navigation.astro
+++ b/src/components/navigation.astro
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div>
+        <h1>John Lloyd Canoy Navigation</h1>
+    </div>
 </body>
 </html>
