--- a/src/layouts/global-layout.astro
+++ b/src/layouts/global-layout.astro
@@ -1,4 +1,4 @@
-
+import Navigation from '../components/navigation.astro';
 
 <!DOCTYPE html>
 <html lang="en">
@@ -9,6 +9,7 @@
     
 </head>
 <body>
+    <Navigation />
     <slot />
 </body>
 </html>
