--- a/src/components/navigation.astro
+++ b/src/components/navigation.astro
@@ -1,3 +1,7 @@
+---
+import '../styles/global.css'
+---
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +10,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
+    <div class="">
         <h1>John Lloyd Canoy Navigation</h1>
     </div>
 </body>
