--- a/src/components/navigation.astro
+++ b/src/components/navigation.astro
@@ -7,10 +7,10 @@ import '../styles/global.css'
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>John Lloyd Canoy Navigation</title>
 </head>
 <body>
-    <div class="">
+    <div class="p-4   rounded-lg border border-gray-200">
         <h1>John Lloyd Canoy Navigation</h1>
     </div>
 </body>
