--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,10 +3,14 @@
     
     body {
         font-family: "Roboto", sans-serif;
-        margin: 0;
         padding: 0;
         background-color: #333;
         color: #e8e7e7;
+        margin: 20px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        
+
     }
     
     a {
