--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,11 +6,10 @@
         padding: 0;
         background-color: #333;
         color: #e8e7e7;
-        margin: 20px;
-        margin-top: 10px;
+        margin-top: 5px;
         margin-bottom: 10px;
-        
-
+        margin-left: 20px;
+        margin-right: 20px
     }
     
     a {
