--- a/src/components/buttons/a-button.astro
+++ b/src/components/buttons/a-button.astro
@@ -1,11 +1,11 @@
 ---
 const { href } = Astro.props;
-import '../styles/global.css'
+import '/src/styles/global.css'
 ---
 
 <a 
     href={href} 
-    class="px-4 py-2 text-sm font-medium text-gray-700 hover:text-blue-600 hover:bg-gray-100 rounded-md transition-colors duration-200"   
+    class="px-4 py-2 text-sm font-medium  hover:text-[#007bff] hover:bg-gray-100 rounded-md transition-colors duration-200"   
 >
     <slot />
 </a>
