--- a/src/components/navigation.astro
+++ b/src/components/navigation.astro
@@ -11,7 +11,7 @@ import NavButton from './buttons/a-button.astro';
     <title>John Lloyd Canoy Navigation</title>
 </head>
 <body>
-    <div class="p-4   rounded-lg border border-gray-200 flex flex-row items-start gap-4 " >
+    <div class="p-4   rounded-lg border border-gray-200 flex flex-row  gap-4 items-center" >
         <h1>John Lloyd Canoy Navigation</h1>
         <NavButton href="/about">About</NavButton>
         <NavButton href="/projects">Projects</NavButton>
