--- a/src/components/navigation.astro
+++ b/src/components/navigation.astro
@@ -13,8 +13,8 @@ import NavButton from './buttons/a-button.astro';
 <body>
     <div class="p-4   rounded-lg border border-gray-200 flex flex-row  gap-4 items-center" >
         <h1>John Lloyd Canoy Navigation</h1>
-        <NavButton href="/about">About</NavButton>
-        <NavButton href="/projects">Projects</NavButton>
+        <NavButton href="#about">About</NavButton>
+        <NavButton href="projects">Projects</NavButton>
         <NavButton href="/contact">Contact</NavButton>
     </div>
 </body>
