correcting  file path

--- a/src/components/navigation.astro
+++ b/src/components/navigation.astro
@@ -15,7 +15,7 @@ import NavButton from './buttons/a-button.astro';
         <h1>John Lloyd Canoy Navigation</h1>
         <NavButton href="#about">About</NavButton>
         <NavButton href="#projects">Projects</NavButton>
-        <NavButton href="/contact">Contact</NavButton>
+        <NavButton href="#contact">Contact</NavButton>
     </div>
 </body>
 </html>
