--- a/src/layouts/global-layout.astro
+++ b/src/layouts/global-layout.astro
@@ -1,5 +1,6 @@
 ---
 import Navigation from '../components/navigation.astro';
+import Footer from '../components/footer.astro';
 ---
 <!DOCTYPE html>
 <html lang="en">
@@ -12,6 +13,7 @@ import Navigation from '../components/navigation.astro';
 <body>
     <Navigation />
     <slot />
+    <Footer />
 </body>
 </html>
 
