--- a/src/layouts/global-layout.astro
+++ b/src/layouts/global-layout.astro
@@ -3,16 +3,18 @@ import Navigation from '../components/navigation.astro';
 import Footer from '../components/footer.astro';
 ---
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-full">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>John Lloyd Canoy Portfolio</title>
     
 </head>
-<body>
+<body class="min-h-full flex flex-col">
     <Navigation />
-    <slot />
+    <main class="flex-grow">
+        <slot />
+    </main>
     <Footer />
 </body>
 </html>
