using the navigation template

--- a/src/components/navigation.astro
+++ b/src/components/navigation.astro
@@ -5,7 +5,7 @@ import NavButton from './buttons/a-button.astro';
 <nav class="bg-[#333] text-[#e8e7e7] border-b border-gray-700 px-6 py-4 flex flex-row items-center justify-between sticky top-0 z-50">
     
     <a href="/" class="text-xl font-bold tracking-wider hover:text-white transition-colors duration-200">
-        JOHN<span class="text-blue-500">LLOYD</span>
+        JOHNLLOYD<span class="text-blue-500">CANOY</span>
     </a>
 
     <div class="flex flex-row gap-2 items-center">
