--- a/src/components/navigation.astro
+++ b/src/components/navigation.astro
@@ -9,9 +9,9 @@ import NavButton from './buttons/a-button.astro';
     </a>
 
     <div class="flex flex-row gap-2 items-center">
+        <NavButton href="#about">Home</NavButton>
         <NavButton href="#about">About</NavButton>
         <NavButton href="#projects">Projects</NavButton>
         <NavButton href="#contact">Contact</NavButton>
     </div>
-
 </nav>
