--- a/src/components/navigation.astro
+++ b/src/components/navigation.astro
@@ -12,6 +12,8 @@ import NavButton from './buttons/a-button.astro';
         <NavButton href="#about">Home</NavButton>
         <NavButton href="#about">About</NavButton>
         <NavButton href="#projects">Projects</NavButton>
+        <NavButton href="#leadership">Leadership</NavButton>
+        <NavButton href="#leadership">Engagements</NavButton>
         <NavButton href="#contact">Contact</NavButton>
     </div>
 </nav>
