--- a/src/components/tagline.astro
+++ b/src/components/tagline.astro
@@ -3,5 +3,5 @@
     <br>
     <span class="text-xl text-gray-600">Software Developer | Open Source Enthusiast</span>
     <br>
-    <span class="text-lg text-gray-500">Building scalable web applications and intuitive user interfaces.</span>
+    <span class="text-lg text-gray-500">BUILDING SOMETHING OUT OF NOTHING</span>
 </h1>
