--- a/src/layouts/global-layout.astro
+++ b/src/layouts/global-layout.astro
@@ -1,7 +1,7 @@
 ---
 import Navigation from '../components/navigation.astro';
 import Footer from '../components/footer.astro';
-
+import Home from '../pages/home.astro';
 
 ---
 <!DOCTYPE html>
@@ -16,6 +16,7 @@ import Footer from '../components/footer.astro';
     <Navigation />
     <main class="flex-grow">
         <slot />
+        <Home />
     </main>
     <Footer />
 </body>
