cadding asset img

--- a/src/pages/home.astro
+++ b/src/pages/home.astro
@@ -9,6 +9,7 @@ import Tagline from '../components/tagline.astro';
 </head>
 <body>
     <Tagline />
+    <img src="../assets/Home-assets.png" alt="Home Image" class="w-full h-auto mt-6 rounded-lg shadow-md">
     <slot />
 </body>
 </html>
