cadding asset img

--- a/src/pages/home.astro
+++ b/src/pages/home.astro
@@ -14,7 +14,7 @@ import homeAsset from "../assets/Home-asset.png";
         <img
         src={homeAsset.src}
         alt="Home Image"
-        class="w-170 h-auto mt-6 rounded-lg shadow-md "
+        class="w-170 h-auto mt-6 rounded-lg "
         />
         <slot />
     </body>
