--- a/src/pages/home.astro
+++ b/src/pages/home.astro
@@ -10,14 +10,15 @@ import homeAsset from "../assets/Home-asset.png";
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     </head>
     <body>
-        <div class="flex items-center gap-6 flex-col md:flex-row">
-            <Tagline />
+        <div
+        class="flex items-center justify-center gap-6 flex-col md:flex-row mx-auto max-w-7xl px-6"
+        >
+        <Tagline />
         <img
-        src={homeAsset.src}
-        alt="Home Image"
-        class="w-170 h-auto mt-6 rounded-lg "
+            src={homeAsset.src}
+            alt="Home Image"
+            class="w-170 h-auto mt-6 rounded-lg"
         />
         </div>
-        
     </body>
 </html>
