--- a/src/components/tagline.astro
+++ b/src/components/tagline.astro
@@ -1,7 +1,7 @@
 <h1>
-    <span class="text-4xl font-bold text-gray-800">John Lloyd Canoy</span>
+    <span class="text-4xl font-bold text-[#f5f5f5]">John Lloyd Canoy</span>
     <br>
-    <span class="text-xl text-gray-600">Software Developer | Open Source Enthusiast</span>
+    <span class="text-xl text-[#f5f5f5]">Software Developer | Open Source Enthusiast</span>
     <br>
-    <span class="text-lg text-gray-500">BUILDING SOMETHING OUT OF NOTHING</span>
+    <span class="text-lg text-[#f5f5f5]">BUILDING SOMETHING OUT OF NOTHING</span>
 </h1>
