--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
 <body>
-    
+    <div>
+        <h1>ABOUT ME:</h1>
+        <p>Hello! I'm John Lloyd Canoy, a passionate software developer with a strong interest in open source technologies. I enjoy building innovative solutions and contributing to the developer community.</p>
+    </div>
 </body>
-</html>
