--- a/src/layouts/global-layout.astro
+++ b/src/layouts/global-layout.astro
@@ -2,7 +2,7 @@
 import Navigation from '../components/navigation.astro';
 import Footer from '../components/footer.astro';
 import Home from '../pages/home.astro';
-
+import About from '../pages/about.astro';
 ---
 <!DOCTYPE html>
 <html lang="en" class="h-full">
@@ -17,6 +17,7 @@ import Home from '../pages/home.astro';
     <main class="flex-grow">
         <slot />
         <Home />
+        <About />
     </main>
     <Footer />
 </body>
