--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,4 +3,8 @@
         <h1>ABOUT ME:</h1>
         <p>Hello! I'm John Lloyd Canoy, a passionate software developer with a strong interest in open source technologies. I enjoy building innovative solutions and contributing to the developer community.</p>
     </div>
+    <div>
+        <h2>Passionate</h2>
+        
+    </div>
 </body>
