Having about me page

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,6 +5,7 @@
     </div>
     <div>
         <h2>Passionate</h2>
-        
+        <h2>Willing to Learn</h2>
+        <h2>Independently Responsible</h2>
     </div>
 </body>
