--- a/src/layouts/global-layout.astro
+++ b/src/layouts/global-layout.astro
@@ -3,6 +3,7 @@ import Navigation from '../components/navigation.astro';
 import Footer from '../components/footer.astro';
 import Home from '../pages/home.astro';
 import About from '../pages/about.astro';
+import Projects from '../pages/projects.astro';
 ---
 <!DOCTYPE html>
 <html lang="en" class="h-full">
@@ -18,6 +19,7 @@ import About from '../pages/about.astro';
         <slot />
         <Home />
         <About />
+        <Projects />
     </main>
     <Footer />
 </body>
