--- a/src/components/navigation.astro
+++ b/src/components/navigation.astro
@@ -15,6 +15,6 @@ import NavButton from './buttons/a-button.astro';
         <NavButton href="#skills">Skills</NavButton>
         <NavButton href="#leadership">Leadership</NavButton>
         <NavButton href="#engagements">Engagements</NavButton>
-        <NavButton href="#contact">Contact</NavButton>
+        <a class="px-4 py-2 text-sm font-medium text-[#333] bg-gray-100 rounded-md transition-colors duration-200" href="#contact">Contact</a>
     </div>
 </nav>
