Updating:Importing lay outs

--- a/src/layouts/global-layout.astro
+++ b/src/layouts/global-layout.astro
@@ -4,6 +4,10 @@ import Footer from '../components/footer.astro';
 import Home from '../pages/home.astro';
 import About from '../pages/about.astro';
 import Projects from '../pages/projects.astro';
+import Skills from '../pages/skills.astro';
+import Leadership from '../pages/leadership.astro';
+import Engagements from '../pages/engagements.astro';
+import Contacts from '../pages/contacts.astro';
 ---
 <!DOCTYPE html>
 <html lang="en" class="h-full">
@@ -20,6 +24,10 @@ import Projects from '../pages/projects.astro';
         <Home />
         <About />
         <Projects />
+        <Skills />
+        <Leadership />
+        <Engagements />
+        <Contacts />
     </main>
     <Footer />
 </body>
